seaqt/QtMultimedia/gen_qvideosink.h

class QMetaObject;
class QObject;
class QSize;
class QVideoFrame;
class QVideoSink;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVideoFrame QVideoFrame;
typedef struct QVideoSink QVideoSink;
QVideoSink* QVideoSink_new();
QVideoSink* QVideoSink_new2(QObject* parent);
QMetaObject* QVideoSink_metaObject(const QVideoSink* self);
void* QVideoSink_metacast(QVideoSink* self, const char* param1);
int QVideoSink_metacall(QVideoSink* self, int param1, int param2, void** param3);
struct miqt_string QVideoSink_tr(const char* s);
QSize* QVideoSink_videoSize(const QVideoSink* self);
struct miqt_string QVideoSink_subtitleText(const QVideoSink* self);
void QVideoSink_setSubtitleText(QVideoSink* self, struct miqt_string subtitle);
void QVideoSink_setVideoFrame(QVideoSink* self, QVideoFrame* frame);
QVideoFrame* QVideoSink_videoFrame(const QVideoSink* self);
void QVideoSink_videoFrameChanged(const QVideoSink* self, QVideoFrame* frame);
void QVideoSink_connect_videoFrameChanged(QVideoSink* self, intptr_t slot);
void QVideoSink_subtitleTextChanged(const QVideoSink* self, struct miqt_string subtitleText);
void QVideoSink_connect_subtitleTextChanged(QVideoSink* self, intptr_t slot);
void QVideoSink_videoSizeChanged(QVideoSink* self);
void QVideoSink_connect_videoSizeChanged(QVideoSink* self, intptr_t slot);
struct miqt_string QVideoSink_tr2(const char* s, const char* c);
struct miqt_string QVideoSink_tr3(const char* s, const char* c, int n);
bool QVideoSink_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QVideoSink_virtualbase_metaObject(const void* self);
bool QVideoSink_override_virtual_metacast(void* self, intptr_t slot);
void* QVideoSink_virtualbase_metacast(void* self, const char* param1);
bool QVideoSink_override_virtual_metacall(void* self, intptr_t slot);
int QVideoSink_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QVideoSink_override_virtual_event(void* self, intptr_t slot);
bool QVideoSink_virtualbase_event(void* self, QEvent* event);
bool QVideoSink_override_virtual_eventFilter(void* self, intptr_t slot);
bool QVideoSink_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QVideoSink_override_virtual_timerEvent(void* self, intptr_t slot);
void QVideoSink_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QVideoSink_override_virtual_childEvent(void* self, intptr_t slot);
void QVideoSink_virtualbase_childEvent(void* self, QChildEvent* event);
bool QVideoSink_override_virtual_customEvent(void* self, intptr_t slot);
void QVideoSink_virtualbase_customEvent(void* self, QEvent* event);
bool QVideoSink_override_virtual_connectNotify(void* self, intptr_t slot);
void QVideoSink_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QVideoSink_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QVideoSink_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QVideoSink_staticMetaObject();
void QVideoSink_delete(QVideoSink* self);